# dagster-demo-skills

./: README.md  dagster-docs-1.6-vs-current-analysis.md  dagster-release-comparison-1.12.19-vs-1.12.20.md  dbt-cloud-partitions-analysis.md  implementation-plan.md
data_platform/: README.md  pyproject.toml
data_platform/.dg/: telemetry.yaml
data_platform/src/data_platform/components/: aws_dms_replication_component.py  custom_fivetran_component.py  mariadb_cdc_checks_component.py  mariadb_cdc_manager_component.py  mariadb_cdc_sensor_component.py  rivery_component.py  scheduled_job_component.py  sigma_workspace_component.py
data_platform/src/data_platform/defs/analytics_dbt/: defs.yaml
data_platform/src/data_platform/defs/analytics_dbt/dbt_project/: dbt_project.yml  profiles.yml
data_platform/src/data_platform/defs/analytics_dbt/dbt_project/models/marts/: fct_customer_360.sql  fct_marketing_attribution.sql  fct_product_performance.sql  fct_revenue.sql
data_platform/src/data_platform/defs/analytics_dbt/dbt_project/models/staging/: sources.yml  stg_cdc_orders.sql  stg_dms_customers.sql  stg_dms_order_items.sql  stg_dms_products.sql  stg_hubspot_campaigns.sql  stg_sf_accounts.sql  stg_sf_opportunities.sql  stg_stripe_payments.sql
data_platform/src/data_platform/defs/bi_pipeline/: defs.yaml
data_platform/src/data_platform/defs/cdc_pipeline/: defs.yaml
data_platform/src/data_platform/defs/dms_cdc_pipeline/: defs.yaml
data_platform/src/data_platform/defs/ingestion_pipeline/: defs.yaml
data_platform/src/data_platform/defs/schedules/: defs.yaml
(+37 files in other folders)
