[project]
name = "data_platform"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.18",
    "dagster-dbt>=0.28.18",
    "dagster-fivetran>=0.28.18",
    "dagster-sigma>=0.28.18",
    "dbt-duckdb>=1.10.1",
    "dlt>=1.23.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "data_platform"
registry_modules = [
    "data_platform.components.*",
]


